# EXCEED-DM

./: .gitignore  CMakeLists.txt  EXCEED-DM-docs.md  EXDM_out_.hdf5  README.md  TODO.md  changelog.md  fobos  install-cmake.md  install.md
docs/: EXCEED-DM-docs.md  bibliography.bib  bibliography.bib.bak  bibliography.bib.sav  conf.py  conf.py.in  index.html  index.rst  jabref.xml  search.html
docs/doctrees/: environment.pickle  index.doctree
docs/ford/: index.html  search.html
docs/html/: .buildinfo  f-modindex.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/interface/: calc_abs_pi.html  calc_pi_1_1_mat.html  calc_pi_v2_v2.html  calc_pi_vi_vj.html  calc_tff_pw_pw.html  calc_tff_vc.html  calc_tran_form_1.html  calc_tran_form_v.html  calc_tran_form_v2.html  compute_dielectric.html  compute_self_energies.html  dielectric_calc_vc.html  dme_scatter_vc_calc.html  exdm_scatter_vc_calc.html  get_in_wfc_ft.html
docs/lists/: files.html  modules.html  procedures.html  types.html
docs/module/: abs_calc_pi.html  abs_tran_form_calc.html  absorption_input.html  binned_scatter_rate_type.html  bins_dielectric_type.html  bins_scatter_type.html  calc_dielectric.html  calc_dielectric_vc.html  calc_dme_scatter_cc.html  calc_dme_scatter_cf.html  calc_dme_scatter_vc.html  calc_dme_scatter_vf.html  calc_exdm_scatter_cc.html  calc_exdm_scatter_cf.html  calc_exdm_scatter_vc.html  calc_exdm_scatter_vf.html  calc_pi.html  constants.html  control_input.html  core_electron_type.html  core_electrons.html  dft_parameters.html  di_grid.html  di_transition.html  dielectric_input.html  dm_model_type.html  dme_absorption.html  dme_scatter.html  dme_scatter_cc.html  dme_scatter_cf.html  dme_scatter_vc.html  dme_scatter_vf.html  exdm_absorption.html  exdm_dielectric.html  exdm_scatter.html  exdm_scatter_cc.html  exdm_scatter_cf.html  exdm_scatter_vc.html  exdm_scatter_vf.html  expt_type.html  (+34 more)
docs/page/: index.html
docs/pages/: data.rst  getting_started.rst  index.md  papers.rst
docs/proc/: abs_create_k_id_list.html  abs_create_val_id_list.html  analytic_screening.html  atomic_sto_wf.html  atomic_sto_wf_ft.html  atomic_sto_wf_ft_radial.html  atomic_sto_wf_radial.html  bcast_self_energies.html  binned_scatter_rate_compute_rate.html  binned_scatter_rate_init.html  calc_abs_pi_no_spin.html  calc_abs_pi_spin.html  calc_abs_tran_form.html  calc_core_sto_wf_grid.html  calc_eig_system_33.html  calc_eigvals_33.html  calc_pi_11_mat.html  calc_pi_1_1_mat_no_spin.html  calc_pi_1_1_mat_spin.html  calc_pi_1v.html  calc_pi_v1.html  calc_pi_v2_v2_no_spin.html  calc_pi_v2_v2_spin.html  calc_pi_vi_vj_no_spin.html  calc_pi_vi_vj_spin.html  calc_pi_vv.html  calc_rate_ps.html  calc_rate_scalar.html  calc_rate_scalar_lo.html  calc_rate_vector.html  calc_tff_pw_pw_no_spin.html  calc_tff_pw_pw_spin.html  calc_tff_vc_no_spin.html  calc_tff_vc_spin.html  calc_tran_form.html  calc_tran_form_1_no_spin.html  calc_tran_form_1_spin.html  calc_tran_form_v2_no_spin.html  calc_tran_form_v2_spin.html  calc_tran_form_v_no_spin.html  (+234 more)
docs/program/: exdm.html
docs/sourcefile/: abs_calc_pi.f90.html  abs_tran_form_calc.f90.html  absorption_input.f90.html  binned_scatter_rate_type.f90.html  bins_dielectric_type.f90.html  bins_scatter_type.f90.html  calc_dielectric.f90.html  calc_dielectric_vc.f90.html  calc_dme_scatter_cc.f90.html  calc_dme_scatter_cf.f90.html  calc_dme_scatter_vc.f90.html  calc_dme_scatter_vf.f90.html  calc_exdm_scatter_cc.f90.html  calc_exdm_scatter_cf.f90.html  calc_exdm_scatter_vc.f90.html  calc_exdm_scatter_vf.f90.html  calc_pi.f90.html  constants.f90.html  control_input.f90.html  core_electron_type.f90.html  core_electrons.f90.html  dft_parameters.f90.html  di_grid.f90.html  di_transition.f90.html  dielectric_input.f90.html  dm_model_type.f90.html  dme_absorption.f90.html  dme_scatter.f90.html  dme_scatter_cc.f90.html  dme_scatter_cf.f90.html  dme_scatter_vc.f90.html  dme_scatter_vf.f90.html  exdm.f90.html  exdm_absorption.f90.html  exdm_dielectric.f90.html  exdm_scatter.f90.html  exdm_scatter_cc.f90.html  exdm_scatter_cf.f90.html  exdm_scatter_vc.f90.html  exdm_scatter_vf.f90.html  (+35 more)
docs/src/: DFT_parameters.f90  FFT_util.f90  MPI_util.f90  PW_dataset_type.f90  Zeff_input.f90  absorption_input.f90  bins_scatter_type.f90  calc_dielectric.f90  calc_dme_scatter_cc.f90  calc_dme_scatter_cf.f90  calc_dme_scatter_vc.f90  calc_exdm_scatter_cc.f90  calc_exdm_scatter_cf.f90  calc_exdm_scatter_vc.f90  constants.f90  control_input.f90  core_electron_type.f90  core_electrons.f90  dm_model_type.f90  dme_scatter.f90  dme_scatter_cf.f90  dme_scatter_vc.f90  exdm.f90  exdm_absorption.f90  exdm_scatter.f90  exdm_scatter_cf.f90  exdm_scatter_vc.f90  exdm_scatter_vf.f90  in_med_scr.f90  io_input.f90  material_input.f90  math_mod.f90  numerics_input.f90  numerics_scatter_vc.f90  particle_physics_abs.f90  physics_scatter_functions.f90  prec.f90  rate_calc_scalar.f90  rate_calc_vector.f90  timing.f90  (+5 more)
docs/tipuesearch/: tipuesearch_content.js
docs/type/: binned_scatter_rate_t.html  bins_dielectric_t.html  bins_scatter_t.html  control_t.html  core_electron_t.html  dm_model_t.html  expt_t.html  fft_grid_t.html  in_med_scr_t.html  io_files_t.html  material_t.html  numerics_abs_t.html  numerics_dielectric_t.html  numerics_scatter_cc_t.html  numerics_scatter_cf_t.html  numerics_scatter_vc_t.html  numerics_scatter_vf_t.html  parallel_manager_t.html  pw_dataset_t.html  width_parameters_t.html
docs/webpage/: index.html  search.html
examples/: readme.md  run_all_examples.sh
examples/1/: analysis.ipynb  input.txt  readme.md
examples/10/: analysis.ipynb  input.txt  (+1 more)
releases/: build_release.sh
src/: DFT_parameters.f90  control_input.f90  exdm.f90  io_input.f90  transition.f90
tests/: run_tests.sh
utilities/: build_release.sh
(+1133 files in other folders)
